# AWS_EMR

./: .gitignore  pyproject.toml
ci/tag/: bump_version.sh  current_version.sh
resources/serverless/: deploy.sh  dev.sh  template.yml
resources/serverless/src/: spark_submit.py
resources/spark/: README.md  base-emr-configuration.json  build.sh  cli-deploy.sh  deploy.sh  push.sh  states.asl.json  template.yml
resources/spark/Lambda/start_emr_cluster/: start_emr_cluster.py
resources/spark/pyspark/: Dockerfile
src/: main.py
