[tool.poetry]
name = "emr"
version = "0.1.0"
description = ""
authors = ["Yo-mah-Ya"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.2"
pyspark = "^3.2.1"

[tool.poetry.dev-dependencies]
venv-pack = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
